<resources>
    <string name="app_name" translatable="false">Pop Movies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="action_language">Language</string>

    <string name="text_trailer">Trailers:</string>
    <string name="text_review">Reviews:</string>
    <string name="text_author">A review by&#160;</string>
    <string name="action_favorite">FAVORITE</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_no_trailer">No trailers!</string>
    <string name="text_no_review">No reviews!</string>
    <string name="text_no_favorite">No favorite!</string>

    <string name="sync_account_type" translatable="false">pop.movies.com</string>
    <string name="content_authority" translatable="false">cn.wontao.popmovies</string>

    <string name="text_message">Click to view details</string>
    <string name="text_popular">Popular</string>
    <string name="text_top_rated">Top rated</string>
    <string name="text_collection">Successful collection</string>
    <string name="text_abolish">Abolish successful collection</string>
    <string name="text_warning">No network connection!Please connect wifi or mobile network retry.</string>
</resources>
