<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context="cn.wontao.popmovies.ui.DetailFragment">

    <LinearLayout
        android:id="@+id/liner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/original_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="45dp"
            android:textColor="@android:color/white"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="150dp"
                android:layout_height="200dp"
                tools:src="@drawable/play"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="40dp">

                <TextView
                    android:id="@+id/release_year_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="safdsasd"
                    android:textColor="#9E9E9E"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/release_date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#9E9E9E"
                    android:textSize="20sp"
                    tools:text="aaaa"/>

                <TextView
                    android:id="@+id/vote_average_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    tools:text="saaaaa"/>

                <Button
                    android:id="@+id/favorite_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:text="@string/text_favorite" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/over_view_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:text="adfasdfa"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="16dp"
            android:text="@string/text_trailer"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/no_trailer_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/text_no_trailer" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="16dp"
            android:text="@string/text_review"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/no_review_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/text_no_review" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

